--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.13.0",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "swr": "^2.2.5",
     "zustand": "^4.5.2"
