--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-spinners": "^0.13.8",
     "swr": "^2.2.5",
     "zustand": "^4.5.2"
   },
