--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.13.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
